--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,6 +20,9 @@
   "rules": {
     "react/jsx-filename-extension": [2, { "extensions": [".js", ".jsx", ".ts", ".tsx"] }],
     "import/extensions": "off",
-    "import/no-unresolved": "off"
+    "import/no-unresolved": "off",
+    "react/prop-types": "off",
+    "object-curly-newline": "off",
+    "jsx-a11y/label-has-associated-control": "off"
   }
 }
