--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
     "@types/react": "^16.9.43",
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.5",
-    "bootstrap": "^4.5.0",
+    "@types/styled-components": "^5.1.1",
+    "install": "^0.13.0",
+    "node-sass": "^4.14.1",
     "react": "^16.13.1",
-    "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
-    "typescript": "^3.7.5"
+    "styled-components": "^5.1.1",
+    "typescript": "^3.8.3"
   },
   "scripts": {
     "start": "react-scripts start",
