--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "@types/axios": "^0.14.0",
+    "@types/dotenv": "^8.2.0",
     "@types/jest": "^24.9.1",
     "@types/node": "^12.12.53",
     "@types/react": "^16.9.43",
@@ -17,6 +18,7 @@
     "@types/redux-thunk": "^2.1.0",
     "@types/styled-components": "^5.1.1",
     "axios": "^0.19.2",
+    "dotenv": "^8.2.0",
     "install": "^0.13.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
