--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,6 +26,9 @@
     "object-curly-newline": "off",
     "jsx-a11y/label-has-associated-control": "off",
     "max-len": ["error", { "code": 120 }],
-    "implicit-arrow-linebreak": "off"
+    "implicit-arrow-linebreak": "off",
+    "no-confusing-arrow": "off",
+    "react/jsx-props-no-spreading": "off",
+    "react/jsx-curly-newline": "off"
   }
 }
